No fixed header on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -147,4 +147,8 @@ img.logo {
 	h2 {
 		font-size: 1.5rem;
 	}
+
+	nav {
+		position: relative;
+	}
 }
